Bug 772782 - Add extra PresShell check in DocAccessible creation. r=surkov